# fablab

./: .gitignore  README.md  echo_flower_working.cpp  padayani_prototype.py
17th_sept/: preod.py  prototype.py
18th_sept/: demo.py  optidemo.py
18th_sept/myenv/: pyvenv.cfg
18th_sept/myenv/Scripts/: activate  (+1 more)
21st_sept/: padayani_prototype.py
22nd_sept/: padayani_sitting.py
Documentation/: doc.md
ZED/: trial.py
Zund_ICC/: G_code.md  README.md  index.html
Zund_ICC/Mini-Plotter/: mock_bridge.js  start.js
Zund_ICC/cpp(wip)/: CMakeLists.txt  EdgeDetector.cpp  EdgeDetector.hpp  EdgeFollower.cpp  EdgeFollower.hpp  Exporter.cpp  Exporter.hpp  SearchStrategy.cpp  SearchStrategy.hpp  main.cpp
Zund_ICC/parser/: DEPLOYMENT.md  README.md  esp32_gcode_receiver.ino
Zund_ICC/python/: Zund_ICC_Prototype.py  cut_boundary.csv  cut_boundary.json  live_edge_detection.py
bloom_handshake/: MCbloomMaster5.ino  MCbloomSlave5.ino  README.md
cursor_stuff/: padayani_zed_prototype.py  requirements.txt  try.py
echo_hand/: README.md  echo_installation.py  final_installation.py  hand_tracking.py  server.py  zed_hand_tracking.py
padayani/: Log.md  padayani_tracker.py  padayani_webcam_kalman.py  requirements.txt  sensor_fusion_sitting_detection.py  sitting_detection.py  webcam_sitting_detection.py  zed_sensor_fusion_detection.py  zed_sitting_detection.py
padayani/17th_sept/: padayani_mediapipe.py  track.py
padayani/18th_sept/: demo.py
padayani/Documentation/: 20thNov.md
padayani/ZED/: Working.py
padayani/yolo_nano/: padayani_webcam_kalman.py  pose_estimation.py
(+45 files in other folders)
